--- a/public/css/style.css
+++ b/public/css/style.css
@@ -120,6 +120,48 @@ section {
 
 /* home */
 
+
+
+/* share */
+.share-btn-container{
+	background-color: white;
+	display: flex;
+	flex-direction: column;
+	padding: 16px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+	position: fixed;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
+.share-btn-container a i{
+	font-size: 22px;
+}
+
+.share-btn-container a{
+	margin: 12px 0;
+	transition: 500ms;
+}
+
+.share-btn-container a:hover{
+	transform: scale(1.4);
+}
+
+.share-btn-container .fa-facebook{
+	color: #1877f2;
+}
+
+.share-btn-container .fa-twitter{
+	color: #1da1f2;
+}
+.share-btn-container .fa-whatsapp{
+	color: #25d366;
+}
+
+
+
+
+
 @keyframes fadeIn {
 	0% {
 		transform: translateY(-4rem) scale(0);
@@ -435,7 +477,7 @@ section {
 /* footer */
 
 .footer {
-	background: url(../images/footer.png);
+	background: whitesmoke;
 	margin-top: 2rem;
 	text-align: center;
 }
@@ -487,24 +529,6 @@ section {
 .footer .icons-container .icons .link:hover {
 	color: var(--hover);
 	text-decoration: underline;
-}
-
-.footer .share {
-	margin: 2rem 0;
-}
-
-.footer .share a {
-	height: 6rem;
-	width: 6rem;
-	line-height: 5.8rem;
-	color: var(--white);
-	background: var(--main-color);
-	margin: 0 0.3rem;
-	font-size: 2.5rem;
-}
-
-.footer .share a:hover {
-	background: var(--hover);
 }
 
 .footer .credit {
@@ -583,5 +607,25 @@ section {
 
 	.home .slide .content h3 {
 		font-size: 3rem;
+	}
+}
+
+
+/* share media */
+
+@media (max-width: 550px){
+	.share-btn-container{
+		transform: unset;
+		top: unset;
+		left: 0;
+		bottom: 0;
+		width: 100%;
+		flex-direction: row;
+		box-shadow: 4px 0 8px rgba(0, 0, 0, 0.3);
+		padding: 16px 0;
+		justify-content: center;
+	}
+	.share-btn-container a{
+		margin: 0 32px;
 	}
 }
