--- a/public/css/style.css
+++ b/public/css/style.css
@@ -84,7 +84,7 @@ section {
 	top: 0;
 	left: 0;
 	right: 0;
-	background: var(--primary-color);
+	background: rgb(255, 208, 121);
 	z-index: 1000;
 }
 
@@ -127,7 +127,7 @@ section {
 	background-color: white;
 	display: flex;
 	flex-direction: column;
-	padding: 16px;
+	padding: 4px;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 	position: fixed;
 	top: 50%;
@@ -135,7 +135,7 @@ section {
 }
 
 .share-btn-container a i{
-	font-size: 22px;
+	font-size: 18px;
 }
 
 .share-btn-container a{
@@ -173,58 +173,6 @@ section {
 	padding: 0;
 }
 
-.home .slide {
-	min-height: 100vh;
-	background-size: cover !important;
-	background-position: center;
-	display: flex;
-	align-items: center;
-}
-
-.home .slide .content {
-	text-align: center;
-	width: 70rem;
-	padding-left: 16rem;
-	display: none;
-}
-
-.home .slide .content h3 {
-	font-size: 6rem;
-	text-transform: uppercase;
-	color: var(--main-color);
-	line-height: 1;
-	padding: 2rem 0;
-	animation: fadeIn 0.4s cubic-bezier(0.54, 1.3, 0.63, 1.34) 0.2s backwards;
-}
-
-.home .slide .content .btn {
-	animation: fadeIn 0.4s cubic-bezier(0.54, 1.3, 0.63, 1.34) 0.4s backwards;
-}
-
-.home .swiper-slide-active .content {
-	display: inline-block;
-}
-
-.swiper-button-next,
-.swiper-button-prev {
-	height: 5rem;
-	width: 5rem;
-	line-height: 5rem;
-	background: var(--white);
-	color: var(--black);
-}
-
-.swiper-button-next:hover,
-.swiper-button-prev:hover {
-	background: var(--main-color);
-	color: var(--white);
-}
-
-.swiper-button-next::after,
-.swiper-button-prev::after {
-	font-size: 2rem;
-}
-
 /* about us */
 
 .about .row {
@@ -238,7 +186,7 @@ section {
 }
 
 .about .row .image img {
-	width: 100%;
+	width: 85%;
 }
 
 .about .row .content {
@@ -311,173 +259,45 @@ section {
 	font-weight: lighter;
 }
 
-/* gallery */
 
-.gallery .gallery-container {
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-	gap: 2rem;
-}
+/* contact us */
 
-.gallery .gallery-container .box {
-	height: 100%;
-	position: relative;
-	overflow: hidden;
-}
-
-.gallery .gallery-container .box img {
-	height: 100%;
-	width: 100%;
-	object-fit: cover;
-}
-
-.gallery .gallery-container .box:hover img {
-	transform: scale(1.1);
-}
-
-.gallery .gallery-container .box .icon {
-	align-items: center;
-	justify-content: center;
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: 10;
-	height: 100%;
-	width: 100%;
-	background: rgba(0, 0, 0, 0.7);
-	display: none;
-}
-
-.gallery .gallery-container .box .icon i {
-	font-size: 6rem;
-	color: var(--white);
-}
-
-.gallery .gallery-container .box:hover .icon {
+.contact form{
+	background: white;
 	display: flex;
+	flex-direction: column;
+	margin: auto;
+	width: 50%;
+	padding: 2vw 4vw;
+	width: 90%;
+	max-width: 600px;	
 }
 
-/* reviews */
-
-.reviews {
-	background-color: var(--bg-color);
+.contact form input, textarea{
+	border: 0;
+	margin: 10px 0;
+	padding: 20px;
+	outline: none;
+	background: #f5f5f5;
+	font-size: 16px;
 }
 
-.reviews .slide {
-	text-align: center;
+.contact form button{
+	padding: 15px;
+	background: rgb(51, 158, 247);
+	color: white;
+	font-size: 18px;
+	border: 0;
+	outline: none;
+	cursor: pointer;
+	width: 300px;
+	margin: 10px auto 0;
+	border-radius: 20px;
 }
-
-.reviews .slide p {
-	font-size: 1.5rem;
-	line-height: 2;
-	color: #a6a9ab;
-	position: relative;
-	background: var(--primary-color);
-	border: 0.1rem solid var(--main-color);
-	margin-bottom: 3rem;
-	padding: 2rem;
-}
-
-.reviews .slide p::before {
-	content: "";
-	position: absolute;
-	bottom: -1.2rem;
-	left: 50%;
-	transform: translateX(-50%) rotate(45deg);
-	background: var(--primary-color);
-	border-bottom: 0.1rem solid var(--main-color);
-	border-right: 0.1rem solid var(--main-color);
-	height: 2rem;
-	width: 2rem;
-}
-
-.reviews .slide img {
-	height: 7rem;
-	width: 7rem;
-	border-radius: 50%;
-}
-
-.reviews .slide h3 {
-	font-size: 2.2rem;
-	color: var(--black);
-	padding: 0.5rem 0;
-}
-
-.reviews .slide .stars {
-	font-size: 1.2rem;
-	color: var(--main-color);
-	margin-bottom: 3rem;
-}
-
-.swiper-pagination-bullet-active {
-	background: var(--main-color);
-}
-
-/* order */
-
-.order form {
-	padding: 2rem;
-	background: var(--primary-color);
-	box-shadow: var(--box-shadow);
-}
-
-.order form .box-container {
-	display: flex;
-	flex-wrap: wrap;
-	gap: 2rem;
-}
-
-.order form .box-container .box {
-	flex: 1 1 41rem;
-}
-
-.order form .box-container .box .inputBox input,
-.order form .box-container .box .inputBox textarea {
-	width: 100%;
-	margin: 1rem 0;
-	padding: 1.2rem 1.4rem;
-	font-size: 1.7rem;
-	color: var(--black);
-	border: var(--border);
-}
-
-.order form .box-container .box .inputBox input::placeholder,
-.order form .box-container .box .inputBox textarea::placeholder {
-	text-transform: capitalize;
-}
-
-.order form .box-container .box .inputBox input:focus,
-.order form .box-container .box .inputBox textarea:focus {
-	background: var(--main-color);
-	color: var(--white);
-}
-
-.order form .box-container .box .inputBox input:focus::placeholder,
-.order form .box-container .box .inputBox textarea:focus::placeholder {
-	color: #ccc;
-}
-
-.order form .box-container .box .inputBox textarea {
-	height: 20rem;
-	resize: none;
-}
-
-.order form .box-container .box .inputBox .map {
-	height: 20rem;
-	width: 100%;
-	margin: 1rem 0;
-	border: none;
-}
-
-.order form .box-container .box .inputBox span {
-	color: var(--main-color);
-	font-size: 2rem;
-}
-
 /* footer */
 
 .footer {
-	background: whitesmoke;
+	background:rgb(255, 208, 121);;
 	margin-top: 2rem;
 	text-align: center;
 }
@@ -497,8 +317,8 @@ section {
 	height: 6rem;
 	width: 6rem;
 	border-radius: 50%;
-	background: var(--main-color);
-	color: var(--white);
+	background: black;
+	color: white;
 	margin-bottom: 0.5rem;
 	line-height: 5.8rem;
 	font-size: 2rem;
@@ -514,28 +334,16 @@ section {
 .footer .icons-container .icons p {
 	line-height: 1.5;
 	font-size: 1.7rem;
-	color: #a6a9ab;
+	color: #854a07;
 	text-transform: capitalize;
 }
 
-.footer .icons-container .icons .link {
-	font-size: 1.7rem;
-	line-height: 2rem;
-	color: var(--main-color);
-	padding: 0.5rem 0;
-	display: block;
-}
-
-.footer .icons-container .icons .link:hover {
-	color: var(--hover);
-	text-decoration: underline;
-}
 
 .footer .credit {
 	margin-top: 3rem;
 	padding-top: 3rem;
 	font-size: 2rem;
-	color: var(--black);
+	color: rgb(255, 208, 121);
 	border-top: var(--border);
 }
 
