--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,21 @@
 	font-size: small;
 	background-color: lightblue;
   }
+
+  .card1 {
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+	transition: 0.3s;
+	width: 20%;
+	margin-left: 40%;
+	border-radius: 5px;
+	text-align: center;
+	font-size: small;
+	background-color: wheat;
+  }
+  
+  .card1:hover {
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
   
   .card:hover {
 	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
@@ -23,7 +38,10 @@
 	text-align: center;
 	padding: 2px 16px;
   }
-  
+  .container1 {
+	text-align: left;
+	padding: 2px 16px;
+  }
 
 :root {
 	--main-color: #736454;
