--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,46 @@
 @import url("https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600&display=swap");
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 20%;
+    margin-left: 30%;
+    border-radius: 5px;
+    text-align: center;
+    font-size: small;
+    background-color: lightblue;
+  }
+
+  .card1 {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 20%;
+    margin-left: 40%;
+    border-radius: 5px;
+    text-align: center;
+    font-size: small;
+    background-color: wheat;
+  }
+  
+  .card1:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  
+  img {
+    border-radius: 5px 5px 0 0;
+  }
+  
+  .container {
+    text-align: center;
+    padding: 2px 16px;
+  }
+  .container1 {
+    text-align: left;
+    padding: 2px 16px;
+  }
 
 :root {
 	--main-color: #736454;
